# hazardloop

./: .gitignore  .hazardloop-progress.json  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench_results/: real_survival.json  synthetic_cif.json
docs/: CLAIMS.md
scripts/: check_honest_marketing.py  check_no_gpl.py  run_bench.py  verify_step.py
src/hazardloop/: __init__.py  cli.py  controller.py  divergence.py  estimate.py  policy.py  replay.py  types.py
src/hazardloop/adapters/: __init__.py  base.py  mock.py  normalize.py  stubs.py  swebench.py
src/hazardloop/core/: __init__.py  _risksets.py  aalen_johansen.py  bootstrap.py  kaplan_meier.py  nelson_aalen.py  weibull_aft.py
tests/: _helpers.py  test_adapters.py  test_api.py  test_cli.py  test_controller.py  test_core_aalen_johansen.py  test_core_bootstrap.py  test_core_invariants.py  test_core_kaplan_meier.py  test_core_nelson_aalen.py  test_core_weibull_aft.py  test_divergence.py  test_honest_marketing.py  test_replay.py  test_types.py
